Updates POMs, licence.html, README, and web admin client index.html to release version 3.4-RC1 (also removes 1 line of debug code from AuthfilterJAAS)

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 -------------------------------------------------------------------
-               Fedora 3.4-SNAPSHOT - Unreleased
+               Fedora 3.4-RC1 - July 2010
 -------------------------------------------------------------------
 This is a full source code release of Fedora.  Before using this
 software, you must read and agree to the license, found under
