--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 -------------------------------------------------------------------
-                 Fedora 3.4-SNAPSHOT - Unreleased
+                 Fedora 3.5 - Released 2010/08/20
 -------------------------------------------------------------------
 This is a full source code release of Fedora.  Before using this
 software, you must read and agree to the license, found under
