Point to Fedora landing page on wiki, where links to docs can be found.

--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 This is a full source code release of Fedora.  Before using this
 software, you must read and agree to the license, found under
 resources/doc/license/license.html.  Documentation can be found for
-online browsing or download at http://fedora-commons.org/go/fcr30
+online browsing or download at https://wiki.duraspace.org/display/FEDORA
 
 Building Fedora
 ===============
