--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 -------------------------------------------------------------------
-                 Fedora 3.5-SNAPSHOT - Unreleased
+                  Fedora 3.5 - August 18th, 2011
 -------------------------------------------------------------------
 This is a full source code release of Fedora.  Before using this
 software, you must read and agree to the license, found under
