FCREPO-1123: Version strings should be updated programmatically
Filters ${project.version} in license.html and config/spring/README.txt via assemly-plugin.

Removes version string from the web admin swf.

https://jira.duraspace.org/browse/FCREPO-1123

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 -------------------------------------------------------------------
-                  Fedora 3.6
+                  Fedora Commons Repository
 -------------------------------------------------------------------
 This is a full source code release of Fedora.  Before using this
 software, you must read and agree to the license, found under
