--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+----
+# This project is no longer maintained
+----
+
 -------------------------------------------------------------------
                   Fedora Commons Repository
 -------------------------------------------------------------------
